--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,11 @@ a{
     font-size: 1rem;
     text-decoration: none;
 }
+a:hover{
+    text-decoration: underline;
+    color: var(--primary-color);
+}
+
 body{
     font-family: 'Poppins', sans-serif;
     background: #fafafa;
